<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/input"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <LinearLayout
        android:id="@+id/recorder"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/editor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ToggleButton
            android:id="@+id/buttonRecord"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:layout_weight="1"
            android:textOff="@string/VoiceKeyboardService_toggleOffLabel"
            android:textOn="@string/VoiceKeyboardService_toggleOnLabel"
            app:icon="@android:drawable/ic_btn_speak_now" />

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:layout_weight="1"
            android:text="@string/VoiceKeyboardService_cancelLabel" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/editor"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/recorder"
        app:layout_constraintTop_toTopOf="parent">


        <Button
            android:id="@+id/buttonDelete"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/VoiceKeyboardService_backspaceLabel" />

        <Button
            android:id="@+id/buttonNewline"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/VoiceKeyboardService_newlineLabel" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>